cluster/base/longhorn-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    hajimari.io/enable: "true"
    #hajimari.io/icon: "podcast"
    #hajimari.io/appName: "podsync"
spec:
  rules:
  - host: longhorn.${SECRET_DOMAIN_INTERNAL}
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
